# lcv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  rust-toolchain.toml
.github/workflows/: release.yaml
src/: app.rs  coder.rs  main.rs  term.rs  trace.rs  tui.rs  util.rs
src/coder/: ami.rs  hdb3.rs  manch.rs  mlt3.rs  nrz.rs  rz.rs
src/tui/: banner.rs  footer.rs  params.rs  style.rs  visualizer.rs  widget.rs
