[package]
name = "lcv"
version = "0.1.0"
edition = "2024"
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
description = "TUI-based line coding visualizer"

[dependencies]
tokio = { version = "1.47.1", features = [
    "signal",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ratatui = { version = "0.29.0", features = ["crossterm", "all-widgets"] }
crossterm = { version = "0.29.0", features = ["windows", "event-stream"] }
anyhow = "1.0.99"
serde = "1.0.219"
nom = "8.0.0"
