[package]
name = "lcv"
version = "0.1.0"
edition = "2024"
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
description = "Playground for line codes"
repository = "https://github.com/MrFixThis/lcv"

[dependencies]
tokio = { version = "1.47.1", features = [
    "time",
    "signal",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tokio-util = "0.7.16"
futures = "0.3.31"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = [
    "registry",
    "env-filter",
] }
ratatui = { version = "0.29.0", features = [
    "crossterm",
    "all-widgets",
    "unstable-widget-ref",
] }
crossterm = { version = "0.29.0", features = ["windows", "event-stream"] }
signal-hook = { version = "0.3.18", default-features = false }
directories = "6.0.0"
anyhow = "1.0.99"
better-panic = "=0.3.0"
serde = "1.0.219"
nom = "8.0.0"
